Changes errors css to wrap text correctly, adds non-visual queue to error messages

--- a/service-front/assets/sass/patterns/_form-popup.scss
+++ b/service-front/assets/sass/patterns/_form-popup.scss
@@ -181,7 +181,7 @@
             position: relative;
             top: 13px;
             left: 150px;
-            width: 280%;
+            width: 80%;
             padding-bottom: 15px;
         }
     }
